<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/gameName"
        android:layout_width="245dp"
        android:layout_height="73dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/gameName"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameInfo"
        android:layout_width="245dp"
        android:layout_height="53dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/gameInfo"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/diamond" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/diamond" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/diamond" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/diamond" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow4"
        android:layout_width="343dp"
        android:layout_height="401dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="96dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="imageButton4,imageButton3,imageButton2,imageButton1"
        app:flow_wrapMode="aligned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.constraintlayout.helper.widget.Flow>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refreshButton"
        android:layout_width="56dp"
        android:layout_height="55dp"
        android:layout_marginEnd="14dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow4"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <TextView
        android:id="@+id/score1"
        android:layout_width="92dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/score"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow4" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="0"
        android:textSize="30dp"
        app:layout_constraintStart_toEndOf="@+id/score1"
        app:layout_constraintTop_toBottomOf="@+id/flow4" />


</androidx.constraintlayout.widget.ConstraintLayout>